--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Extraction</title>
+    <link rel="stylesheet" href="/style.css">
+
+
 </head>
-<body>
-    
+<body >
+    <div class="header">
+            <p> Text Extracter Using AWS</p>
+    </div>
+    <div class="container">
+        <p>Uploade Scanned Document</p>
+        <input type="file" id="inputElement" accept=".pdf">
+        
+
+    </div>
+    <div class="display">
+
+    </div>
+    <script src="/script.js">
+
+    </script>
 </body>
 </html>
